toy_k8s/kiali/kiali-virtualservice.yml
# kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - kiali-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
